# qstash-worker

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
examples/: callback_server.py  producer.py  worker.py
qstash_worker/: __init__.py  client.py  config.py  decorators.py  models.py  worker.py
tests/: test_core.py
